--- a/html/popup/templates/counters.html
+++ b/html/popup/templates/counters.html
@@ -5,6 +5,21 @@
 {{/nothing_detected}}
 {{^nothing_detected}}
   <div class="interceptions">
+    <h2>{{timer_title}}:</h2>
+
+    {{#timer_calls}}
+      <div class="calls {{#disabled_class}}timer,{{name}}{{/disabled_class}}" title="{{title_for_tooltip}}" data-kind="timer" data-type="{{name}}">
+        <span class="name">{{name}}</span>
+        <span class="allowed" style="background-color:{{allowed_color}};">{{allowed}}</span>
+        <span class="blocked" style="background-color:{{blocked_color}};">{{blocked}}</span>
+      </div>
+    {{/timer_calls}}
+    {{^timer_calls}}
+      <div class="nothing-detected">
+        {{nothing_detected_message}}
+      </div>
+    {{/timer_calls}}
+
     <h2>{{handle_event_title}}:</h2>
 
     {{#handle_event_calls}}
