--- a/css/popup/popup.css
+++ b/css/popup/popup.css
@@ -1,4 +1,6 @@
 html, body {
+  font-family: 'Open Sans', arial, sans-serif;
+  text-rendering: optimizeLegibility;
   margin: 0;
   padding: 0;
   height: 10px;
@@ -23,14 +25,7 @@ h2 {
 
 .interceptions {
   margin: 6px;
-  width: 538px;
-}
-
-
-@-moz-document url-prefix() {
-  .interceptions {
-    width: 552px;
-  }
+  width: 541px;
 }
 
 .interceptions .calls {
@@ -70,8 +65,7 @@ h2 {
 }
 
 .interceptions .calls .allowed, .interceptions .calls .blocked {
-  padding: 2px 4px 1px 4px;
-  font-size: 9px;
+  padding: 2px 4px;
   position: absolute;
   bottom: -5px;
   color: #FFF;
@@ -108,6 +102,7 @@ h2 {
 .tippy-tooltip.js-sample-theme pre {
   border-top:1px solid #CCC;
   padding-top: 6px;
+  padding-right: 4px;
   overflow: auto;
   overflow-y: scroll;
   min-height: 30px;
