--- a/html/popup/templates/options.html
+++ b/html/popup/templates/options.html
@@ -2,14 +2,14 @@
   <label>
     <input type="checkbox" name="general" value="true" {{#general_injection_enabled}} checked {{/general_injection_enabled}} /> {{general_injection_enabled_title}}
   </label>
-  {{#general_injection_enabled}}
-    {{#domain}}
-      <br>
-      <label>
-        <input type="checkbox" name="{{domain}}" value="true" {{#domain_injection_enabled}} checked {{/domain_injection_enabled}} /> {{domain}}
-      </label>
-    {{/domain}}
-  {{/general_injection_enabled}}
+
+  {{#domain}}
+    <br>
+    <label>
+      <input type="checkbox" name="{{domain}}" value="true" {{^general_injection_enabled}} disabled {{/general_injection_enabled}} {{#domain_injection_enabled}} checked {{/domain_injection_enabled}} /> {{domain}}
+    </label>
+  {{/domain}}
+
   <br>
   <label>
     <input type="checkbox" name="show_listener_functions" value="true" {{#show_listener_functions}} checked {{/show_listener_functions}} /> {{show_listener_functions_title}}
