--- a/html/settings/templates/header.html
+++ b/html/settings/templates/header.html
@@ -1,2 +1,4 @@
 
 <h1>{{title}} <img src="{{icon_path}}" class="title-icon" /></h1>
+
+<a href="https://github.com/gbaptista/luminous/releases/tag/0.0.5" id="version" target="_blank">0.0.5</a>
