--- a/html/popup/templates/options.html
+++ b/html/popup/templates/options.html
@@ -12,6 +12,6 @@
 
   <br>
   <label>
-    <input type="checkbox" name="show_listener_functions" value="true" {{#show_listener_functions}} checked {{/show_listener_functions}} /> {{show_listener_functions_title}}
+    <input type="checkbox" name="show_code_details" value="true" {{#show_code_details}} checked {{/show_code_details}} /> {{show_code_details_title}}
   </label>
 </form>
