--- a/html/settings/templates/stored-data/json.html
+++ b/html/settings/templates/stored-data/json.html
@@ -1,3 +1,9 @@
-<h3 id="{{id}}">{{title}}</h3>
-
-<pre><code>{{{json}}}</code></pre>
+<div class="card">
+  <div class="card-header" id="{{id}}">
+    {{title}}
+  </div>
+  <div class="card-body">
+    <pre><code>{{{json}}}</code></pre>
+  </div>
+</div>
+<br>
