--- a/html/settings/templates/nav.html
+++ b/html/settings/templates/nav.html
@@ -1,7 +1,5 @@
-<ul>
+<div class="list-group list-group-flush">
   {{#links}}
-    <li>
-      <a href="{{url}}">{{title}}</a>
-    </li>
+    <a class="list-group-item list-group-item-action {{#active}}active{{/active}}" href="{{url}}">{{title}}</a>
   {{/links}}
-</ul>
+</div>
