--- a/html/settings/templates/popup/form.html
+++ b/html/settings/templates/popup/form.html
@@ -1,6 +1,5 @@
 <div class="card">
-  <div class="card-header" id="{{id}}">
-    popover on hover action
+  <div class="card-header locale" id="{{id}}" data-locale="settingsPopupTooltipTitle">
   </div>
   <div class="card-body">
     <div class="form-check">
