--- a/html/settings/templates/injection/form.html
+++ b/html/settings/templates/injection/form.html
@@ -25,7 +25,7 @@
             <input class="form-check-input" type="checkbox" data-namespace="injection_disabled" name="{{domain}}" {{^general_injection_enabled}} disabled {{/general_injection_enabled}} value="true" {{#enabled}} checked {{/enabled}}>
             {{domain}}
           </label>
-          <button type="button" data-domain="{{domain}}" class="btn btn-outline-danger btn-sm remove-domain locale" data-locale="settingsRemoveButtonText"></button>
+          <button type="button" data-domain="{{domain}}" class="btn btn-outline-secondary btn-sm remove-domain locale" data-locale="settingsRemoveButtonText"></button>
         </div>
       {{/domains}}
     </div>
