--- a/html/settings/templates/injection/form.html
+++ b/html/settings/templates/injection/form.html
@@ -12,7 +12,7 @@
       <div class="alert alert-warning locale" data-locale="settingsInjectionWarningText" role="alert">
       </div>
 
-      <div class="form-check">
+      <div class="form-check general-injection">
         <label class="form-check-label">
           <input class="form-check-input" type="checkbox" data-namespace="injection_disabled" name="general" value="true" {{#general_injection_enabled}} checked {{/general_injection_enabled}}>
           {{general_injection_enabled_title}}
