--- a/html/settings/templates/blocks/search.html
+++ b/html/settings/templates/blocks/search.html
@@ -1,10 +1,10 @@
 <div class="input-group">
   <div class="input-group-prepend">
-    <span class="input-group-text" id="">filer websites:</span>
+    <span class="input-group-text locale" data-locale="settingsFilterWebsitesText"></span>
   </div>
   <input type="text" id="filter-domains" class="form-control" placeholder="{{placeholder_filter}}" aria-label="{{placeholder_filter}}" aria-describedby="basic-addon2">
 </div>
 
 <br>
 
-<div class="nothing-found">nothing found</div>
+<div class="nothing-found locale" data-locale="settingsNothingFoundText"></div>
