--- a/html/popup/templates/options.html
+++ b/html/popup/templates/options.html
@@ -1,17 +1,49 @@
-<form>
-  <label>
-    <input type="checkbox" name="general" value="true" {{#general_injection_enabled}} checked {{/general_injection_enabled}} /> {{general_injection_enabled_title}}
-  </label>
+<form class="options-form">
+  <div class="col-2 col-2-header">
+    <a href="https://github.com/gbaptista/luminous/releases/tag/0.0.15" id="version" target="_blank">0.0.15</a>
+    <a href=" " id="help-link" class="top-link" target="_blank"></a>
+    <a href="../settings/injection/enabled.html" id="settings-link" class="top-link" target="_blank"></a>
+  </div>
 
-  {{#domain}}
+  <div class="col-1">
+    <label class="general-injection-label">
+      <input type="checkbox" name="general" value="true" {{#general_injection_enabled}} checked {{/general_injection_enabled}} />
+      {{general_injection_enabled_title}}
+    </label>
+  </div>
+  <br class="clear-floats">
+
+
+  <div class="col-1">
+    {{^domain}}
+      <label class="invalid-domain">
+        <input type="checkbox" disabled />
+        {{no_domain}}
+      </label>
+    {{/domain}}
+    {{#domain}}
+      <label class="valid-domain">
+        <input type="checkbox" name="{{domain}}" value="true" {{^general_injection_enabled}} disabled {{/general_injection_enabled}} {{#domain_injection_enabled}} checked {{/domain_injection_enabled}} />
+        {{domain}}
+      </label>
+    {{/domain}}
+    <br class="clear-floats">
+    <label>
+      <input type="checkbox" name="apply_to_default" value="true" {{#apply_to_default}} checked {{/apply_to_default}} />
+      {{apply_to_default_title}}
+    </label>
+  </div>
+
+  <div class="col-2">
+    <label>
+      {{zoom_in_title}}
+      <input type="checkbox" name="zoom_in" value="true" {{#zoom_in}} checked {{/zoom_in}} />
+    </label>
     <br>
     <label>
-      <input type="checkbox" name="{{domain}}" value="true" {{^general_injection_enabled}} disabled {{/general_injection_enabled}} {{#domain_injection_enabled}} checked {{/domain_injection_enabled}} /> {{domain}}
+      {{show_code_details_title}}
+      <input type="checkbox" name="show_code_details" value="true" {{#show_code_details}} checked {{/show_code_details}} />
     </label>
-  {{/domain}}
-
-  <br>
-  <label>
-    <input type="checkbox" name="show_code_details" value="true" {{#show_code_details}} checked {{/show_code_details}} /> {{show_code_details_title}}
-  </label>
+</div>
+<br class="clear-floats">
 </form>
