fix missing br class

--- a/html/popup/templates/options.html
+++ b/html/popup/templates/options.html
@@ -12,8 +12,6 @@
     </label>
   </div>
   <br class="clear-floats">
-
-
   <div class="col-1">
     {{^domain}}
       <label class="invalid-domain">
@@ -39,7 +37,7 @@
       {{zoom_in_title}}
       <input type="checkbox" name="zoom_in" value="true" {{#zoom_in}} checked {{/zoom_in}} />
     </label>
-    <br>
+    <br class="clear-floats">
     <label>
       {{show_code_details_title}}
       <input type="checkbox" name="show_code_details" value="true" {{#show_code_details}} checked {{/show_code_details}} />
