--- a/css/popup/popup.css
+++ b/css/popup/popup.css
@@ -82,6 +82,19 @@ html, body {
   color: #FFF;
 }
 
+.interceptions .calls .execution_time {
+  position: absolute;
+  bottom:-5px;
+  left: 50%;
+  margin-left: -28px;
+  width: 56px;
+  padding: 2px 0;
+  text-align: center;
+  background-color: #8D8E87;
+  color: #FFF;
+  font-style: italic;
+}
+
 .interceptions .calls .allowed {
   border-left:4px solid #20b203;
   left: 10px;
