--- a/html/popup/templates/options.html
+++ b/html/popup/templates/options.html
@@ -39,6 +39,11 @@
     </label>
     <br class="clear-floats">
     <label>
+      {{show_performance_metrics_title}}
+      <input type="checkbox" name="show_performance_metrics" value="true" {{#show_performance_metrics}} checked {{/show_performance_metrics}} />
+    </label>
+    <br class="clear-floats">
+    <label>
       {{show_code_details_title}}
       <input type="checkbox" name="show_code_details" value="true" {{#show_code_details}} checked {{/show_code_details}} />
     </label>
