--- a/html/settings/templates/reports/tables/executions.html
+++ b/html/settings/templates/reports/tables/executions.html
@@ -12,6 +12,7 @@
           <tr>
             <td>{{name}}</td>
             <td>{{calls}}</td>
+            <td>{{execution_time}}</td>
           </tr>
         {{/items}}
       </tbody>
