--- a/html/settings/templates/popup/form.html
+++ b/html/settings/templates/popup/form.html
@@ -18,7 +18,7 @@
 
     <div class="form-check form-check-inline">
       <label class="form-check-label"><div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" data-namespace="popup" name="show_performance_metrics" value="true" {{#apply_to_default}} checked {{/apply_to_default}}>
+        <input class="form-check-input" type="checkbox" data-namespace="popup" name="apply_to_default" value="true" {{#apply_to_default}} checked {{/apply_to_default}}>
         {{apply_to_default_title}}
       </label>
     </div>
