--- a/css/devtools/logs.css
+++ b/css/devtools/logs.css
@@ -1,14 +1,57 @@
+html, body {
+  font-family: 'Open Sans', arial, sans-serif;
+  text-rendering: optimizeLegibility;
+}
+
 * {
-  font-size: 10px;
+  font-size: 11px;
 }
 
-table {
+button {
+  margin: 6px 0 0 1%;
+}
+
+.filters { display: inline-block; }
+
+#filter_in, #filter_out {
+  width: 98%;
+  margin:6px 1% 0 1%;
+  padding:0 1%;
+}
+
+#filter_in {
+  border-left:4px solid #20b203;
+}
+
+#filter_out {
+  border-left:4px solid #ea1004;
+}
+
+#form {
+  position: fixed;
+  height: 92px;
+  z-index: 2;
+  top: 0;
   width: 100%;
+  border-bottom: 6px solid #CCC;
 }
 
-tr.allowed {
-  color:green;
+.table-area {
+  padding-top: 92px;
+  position: fixed;
+  bottom:0;
+  height: 100%;
+  width: 100%;
+  margin-top: -5px;
+  z-index: 1;
 }
-tr.blocked {
-  color:red;
+
+.table-container {
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
+
+table.table {
+  margin-bottom: 0;
 }
