--- a/html/settings/templates/performance/form.html
+++ b/html/settings/templates/performance/form.html
@@ -1,23 +1,5 @@
 <form>
   {{#performance_options}}
-    {{#popup}}
-      <div class="card">
-        <div class="card-header">
-          {{title}}
-        </div>
-        <div class="card-body">
-          {{#code_details}}
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" data-value-as-namespace="true" data-reverse="true" data-namespace="popup" name="show_code_details" value="{{value}}" {{#checked}}checked{{/checked}}>
-                {{label}}
-              </label>
-            </div>
-          {{/code_details}}
-        </div>
-      </div>
-    {{/popup}}
-    <br>
     {{#reports}}
       <div class="card">
         <div class="card-header">
@@ -27,14 +9,32 @@
           {{#generation}}
             <div class="form-check form-check-inline">
               <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" data-reverse="true" data-value-as-namespace="true" data-namespace="reports" name="collect_data" value="{{value}}" {{#checked}}checked{{/checked}}>
-                {{label}}
+                <input class="form-check-input" type="checkbox" data-reverse="true" data-namespace="reports" name="collect_data" value="{{value}}" {{#checked}}checked{{/checked}}>
+                {{disable_text}} <code>{{label}}</code>
               </label>
             </div>
           {{/generation}}
         </div>
       </div>
     {{/reports}}
+    <br>
+    {{#popup}}
+      <div class="card">
+        <div class="card-header">
+          {{title}}
+        </div>
+        <div class="card-body">
+          {{#code_details}}
+            <div class="form-check form-check-inline">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" data-reverse="true" data-namespace="popup" name="show_code_details" value="{{value}}" {{#checked}}checked{{/checked}}>
+                {{disable_text}} <code>{{label}}</code>
+              </label>
+            </div>
+          {{/code_details}}
+        </div>
+      </div>
+    {{/popup}}
     <br>
     {{#auto_settings}}
       <div class="card">
@@ -53,7 +53,7 @@
                     <label class="form-check-label">
                       <input class="form-check-input" type="checkbox"
                       data-reverse="true" data-value-as-namespace="true" data-namespace="auto_settings" name="domains" value="{{value}}" {{#checked}}checked{{/checked}}>
-                      {{label}}
+                      {{disable_text}} <code>{{label}}</code>
                     </label>
                   </div>
                 {{/code_injection}}
@@ -63,7 +63,7 @@
                     <label class="form-check-label">
                       <input class="form-check-input" type="checkbox"
                       data-reverse="true" data-value-as-namespace="true" data-namespace="auto_settings" name="domains" value="{{value}}" {{#checked}}checked{{/checked}}>
-                      {{label}}
+                      {{disable_text}} <code>{{label}}</code>
                     </label>
                   </div>
                 {{/website_rules}}
@@ -77,23 +77,22 @@
                 {{title}}
               </div>
               <div class="card-body">
-                {{#website_rules}}
-                  <div class="form-check form-check-inline">
-                    <label class="form-check-label">
-                      <input class="form-check-input" type="checkbox" data-false-value="common" data-true-value="none" data-namespace="auto_settings" name="website_events" value="{{value}}" {{#checked}}checked{{/checked}}>
-                      {{label}}
-                    </label>
-                  </div>
-                {{/website_rules}}
-
                 {{#default_rules}}
                   <div class="form-check form-check-inline">
                     <label class="form-check-label">
                       <input class="form-check-input" type="checkbox" data-false-value="common" data-true-value="none" data-namespace="auto_settings" name="default_events" data-no-boolean="true" value="{{value}}" {{#checked}}checked{{/checked}}>
-                      {{label}}
+                      {{disable_text}} <code>{{label}}</code>
                     </label>
                   </div>
                 {{/default_rules}}
+                {{#website_rules}}
+                  <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="checkbox" data-false-value="common" data-true-value="none" data-namespace="auto_settings" name="website_events" value="{{value}}" {{#checked}}checked{{/checked}}>
+                      {{disable_text}} <code>{{label}}</code>
+                    </label>
+                  </div>
+                {{/website_rules}}
               </div>
             </div>
           {{/events}}
