setting try_filter_response_data

--- a/html/settings/templates/advanced/form.html
+++ b/html/settings/templates/advanced/form.html
@@ -9,7 +9,7 @@
           {{#strategy}}
             <div class="form-check form-check-inline">
               <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" data-reverse="false" data-namespace="advanced" name="injection_strategy" value="{{value}}" {{#checked}}checked{{/checked}}>
+                <input class="form-check-input" type="checkbox" data-reverse="false" data-namespace="advanced" name="try_filter_response_data" value="{{value}}" {{#checked}}checked{{/checked}}>
                 {{label}}
               </label>
             </div>
